<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:background="@color/mainBackgroundColor"
    xmlns:android="http://schemas.android.com/apk/res/android"
    tools:context=".ui.home.HomeActivity">

    <androidx.appcompat.widget.Toolbar
        android:id="@+id/toolbar2"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/colorPrimary"
        android:elevation="3dp"
        android:theme="@style/Theme.AppCompat.DayNight.DarkActionBar"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.0">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:id="@+id/tv_main_title"
                style="@style/MenuTitleText"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title" />
            <TextView
                android:id="@+id/tv_main_title2"
                style="@style/TextContent"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/main_title2" />
        </LinearLayout>
    </androidx.appcompat.widget.Toolbar>

    <ScrollView
        android:id="@+id/scrollview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintTop_toTopOf="parent">
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">
            <TextView
                android:id="@+id/tv_whats_trending"
                style="@style/TitleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginStart="16dp"
                android:layout_marginTop="85dp"
                android:text="@string/what_trending" />

            <RelativeLayout
                android:id="@+id/trending"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/tv_whats_trending"
                android:layout_marginTop="8dp">

                <ProgressBar
                    android:id="@+id/progress_bar_week"
                    style="?android:attr/progressBarStyle"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerHorizontal="true"
                    android:visibility="gone" />

                <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                    android:id="@+id/rv_this_week"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_gravity="center_vertical"
                    android:orientation="horizontal"
                    app:msrv_gravity="start"
                    app:msrv_interval="1"
                    app:msrv_speed_ms_per_inch="120" />
            </RelativeLayout>

            <TextView
                android:id="@+id/tv_playing_now"
                style="@style/TitleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/trending"
                android:layout_marginStart="16dp"
                android:layout_marginTop="20dp"
                android:text="@string/playing_now" />

            <androidx.cardview.widget.CardView
                android:id="@+id/cv_movie"
                android:layout_width="match_parent"
                android:layout_height="640dp"
                android:layout_below="@id/tv_playing_now"
                android:layout_marginTop="8dp"
                android:layout_marginBottom="8dp"
                app:cardBackgroundColor="@color/mainBackgroundColor2"
                app:cardCornerRadius="10dp">

                <RelativeLayout
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">

                    <TextView
                        android:id="@+id/tv_movie"
                        style="@style/TitleItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="4dp"
                        android:layout_marginBottom="4dp"
                        android:text="@string/movie_now_playing"
                        android:textColor="@color/textBlur" />

                    <ProgressBar
                        android:id="@+id/progressMovie"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_movie"
                        android:layout_centerHorizontal="true"
                        android:visibility="gone" />

                    <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                        android:id="@+id/rv_movie"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_movie"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal"
                        app:msrv_gravity="start"
                        app:msrv_interval="2"
                        app:msrv_speed_ms_per_inch="120" />

                    <TextView
                        android:id="@+id/tv_tv"
                        style="@style/TitleItem"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/rv_movie"
                        android:layout_marginStart="16dp"
                        android:layout_marginTop="16dp"
                        android:text="@string/tv_airing_today"
                        android:textColor="@color/textBlur" />

                    <ProgressBar
                        android:id="@+id/progress_tv"
                        style="?android:attr/progressBarStyle"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_tv"
                        android:layout_centerHorizontal="true"
                        android:visibility="gone" />

                    <com.takusemba.multisnaprecyclerview.MultiSnapRecyclerView
                        android:id="@+id/rv_tv"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        android:layout_below="@id/tv_tv"
                        android:layout_gravity="center_vertical"
                        android:orientation="horizontal"
                        app:msrv_gravity="start"
                        app:msrv_interval="2"
                        app:msrv_speed_ms_per_inch="120" />
                </RelativeLayout>
            </androidx.cardview.widget.CardView>
        </RelativeLayout>

    </ScrollView>
</androidx.constraintlayout.widget.ConstraintLayout>
