<?xml version="1.0" encoding="utf-8"?>
<androidx.coordinatorlayout.widget.CoordinatorLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/detail_activity_movie"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:fitsSystemWindows="true"
    android:background="@color/mainBackgroundColor"
    tools:context=".ui.detail.movie.DetailMovieActivity">

...
                    android:contentDescription="@string/cd_image_poster"
                    android:scaleType="fitXY"
                    android:src="@color/colorAccent" />
            </androidx.cardview.widget.CardView>

            <TextView
                android:id="@+id/tv_title_movie"
                style="@style/TitleItem"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="16dp"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
...
